# optionMusic

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  package.json
.github/workflows/: publish-aur.yml
packaging/aur/: .SRCINFO  PKGBUILD  README.md  bump.sh  publish.sh
src/: cava.rs  cli.rs  config.rs  controller.rs  cover.rs  eq.rs  lib.rs  main.rs  meta.rs  mpv.rs  player.rs  playlist.rs  settings.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-ui/: lib.ts  main.tsx  styles.css  types.ts
src-ui/components/: Catalog.tsx  CommandPalette.tsx  ContextMenu.tsx  CoverThumb.tsx  Empty.tsx  PlayerBar.tsx  SettingsPanel.tsx  Sidebar.tsx  Stage.tsx  TrackRow.tsx  WindowControls.tsx
src-ui/hooks/: useOptMusic.ts
