[package]
name = "optmusic"
version = "0.2.7"
edition = "2024"
rust-version = "1.85"
description = "optMusic — minimal black & white CLI music player (option music)"
authors = ["AEFireflyLabs"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["music", "audio", "player", "cli", "mp3", "mpv"]
categories = ["command-line-utilities", "multimedia::audio"]

# Full name
[[bin]]
name = "optmusic"
path = "src/main.rs"

# Short alias
[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "env"] }
libmpv2 = "5.0"
anyhow = "1"
walkdir = "2"
crossterm = "0.28"
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.150"
lofty = "0.24"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
