[package]
name = "optmusic-desktop"
version = "0.1.1"
description = "Desktop optMusic player"
authors = ["AEFireflyLabs"]
edition = "2021"

[lib]
name = "optmusic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
optmusic = { path = ".." }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
